fix: fix directory display error
